# TerminalMon

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
install-package/: install.sh  runApp.sh  tmon
install-package/src/: daemon.py  main.py  terminalmon.py  utils.py
src/terminalmon/: __init__.py  __main__.py  cli.py  hook.py  model.py  paths.py  storage.py
src/terminalmon/shell/: hook.bash  hook.zsh
tests/: test_cli.py
