[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminalmon"
version = "0.1.0"
description = "Pokémon-inspired terminal companion that levels up as you use your shell"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Benedikt Safigan" }]
keywords = ["terminal", "cli", "game", "shell", "productivity"]
dependencies = ["platformdirs>=3"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/bsafig/TerminalMon"

[project.scripts]
tmon = "terminalmon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/terminalmon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
